--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="https://cdn.jsdelivr.net/pyodide/v0.27.5/full/pyodide.js"></script>
+    <script type="module" src="./pyodide.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
